# rust_hft_arbitrage

./: Cargo.toml  bybit_binance_futures_gap_python.py  main.rs
